test/cases/compile_errors/colliding_invalid_top_level_functions.zig
fn func() void {}
fn func() void {}

// error
//
// :1:4: error: duplicate struct member name 'func'
// :2:4: note: duplicate name here
// :1:1: note: struct declared here
